A1/y.output
Terminals unused in grammar

   ERR


State 61 conflicts: 1 shift/reduce
State 123 conflicts: 2 shift/reduce
State 125 conflicts: 1 shift/reduce
State 134 conflicts: 1 shift/reduce
State 143 conflicts: 20 shift/reduce
State 144 conflicts: 20 shift/reduce
State 145 conflicts: 20 shift/reduce
State 146 conflicts: 20 shift/reduce
State 183 conflicts: 36 shift/reduce
State 241 conflicts: 21 shift/reduce
State 253 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration

    3 @1: %empty

    4 declaration_list: declaration @1 declaration_list

    5 declaration: var_declaration
    6            | fun_declaration
    7            | fun_prototype
    8            | struct_definition

    9 var_declaration: type var_list

   10 svar_declaration: type svar_list

   11 svar_declaration_list: svar_declaration
   12                      | svar_declaration svar_declaration_list

   13 basic_type: INT
   14           | FLOAT
   15           | CHAR
   16           | VOID
   17           | STRUCT VARIABLE
   18           | LONG
   19           | SHORT
   20           | EXTERN
   21           | DOUBLE

   22 type: basic_type
   23     | type basic_type

   24 pointer_type: type
   25             | type stars

   26 stars: MUL
   27      | MUL stars

   28 $@2: %empty

   29 var_list: var_dec $@2 SCOLON

   30 $@3: %empty

   31 var_list: var_dec $@3 COM var_list

   32 $@4: %empty

   33 svar_list: svar_dec $@4 SCOLON

   34 $@5: %empty

   35 svar_list: svar_dec $@5 COM svar_list

   36 var_dec: var_dec_lhs
   37        | var_dec_lhs EQ expression

   38 svar_dec: var_dec_lhs

   39 var_dec_lhs: var_id
   40            | var_id LSQ expression RSQ

   41 var_id: VARIABLE

   42 $@6: %empty

   43 var_id: MUL $@6 var_id

   44 fun_declaration: type var_id LPA proto_param_list RPA compound_statement

   45 fun_prototype: type var_id LPA proto_param_list RPA SCOLON

   46 proto_param_list: %empty
   47                 | proto_params
   48                 | proto_params COM proto_param_list

   49 proto_params: pointer_type
   50             | type var_id
   51             | type var_id nd_bracket

   52 nd_bracket: LSQ RSQ
   53           | nd_bracket LSQ RSQ

   54 struct_definition: STRUCT VARIABLE LCU svar_declaration_list RCU SCOLON
   55                  | STRUCT VARIABLE LCU svar_declaration_list RCU var_list

   56 decl_statement: var_declaration
   57               | struct_definition

   58 statement_list: statement
   59               | statement statement_list

   60 compound_statement: LCU RCU
   61                   | LCU statement_list RCU

   62 statement: compound_statement
   63          | decl_statement
   64          | if_statement
   65          | while_statement
   66          | switch_statement
   67          | return_statement
   68          | break_statement
   69          | case_statement
   70          | assign_statement
   71          | for_statement
   72          | continue_statement
   73          | default_statement
   74          | do_statement
   75          | expression_statement
   76          | SCOLON

   77 lstatement: compound_statement
   78           | if_statement
   79           | while_statement
   80           | switch_statement
   81           | return_statement
   82           | break_statement
   83           | case_statement
   84           | assign_statement
   85           | for_statement
   86           | continue_statement
   87           | default_statement
   88           | do_statement
   89           | expression_statement
   90           | SCOLON

   91 if_statement: IF LPA expression RPA lstatement
   92             | IF LPA expression RPA lstatement ELSE lstatement

   93 while_statement: WHILE LPA expression RPA lstatement

   94 switch_statement: SWITCH LPA expression RPA lstatement

   95 return_statement: RETURN SCOLON
   96                 | RETURN expression SCOLON

   97 case_statement: CASE expression COL statement_list

   98 continue_statement: CONTINUE SCOLON

   99 break_statement: BREAK SCOLON

  100 default_statement: DEFAULT COL statement_list

  101 assign_statement: term EQ expression SCOLON

  102 exp_wrap: %empty
  103         | expression

  104 for_statement: FOR LPA exp_wrap SCOLON exp_wrap SCOLON exp_wrap RPA lstatement
  105              | FOR LPA var_declaration exp_wrap SCOLON exp_wrap RPA lstatement

  106 do_statement: DO lstatement WHILE LPA expression RPA SCOLON

  107 expression: term EQ expression
  108           | expression binary_operator expression
  109           | expression relational_operator expression
  110           | expression logical_operator expression
  111           | cast_expression term
  112           | term

  113 cast_expression: LPA pointer_type RPA

  114 term: SUB term
  115     | ADD term
  116     | unary_operator term
  117     | MUL term
  118     | BAND term
  119     | term PINC
  120     | term PDEC
  121     | PINC term
  122     | PDEC term
  123     | SIZEOF LPA term RPA
  124     | SIZEOF LPA pointer_type RPA
  125     | lhs
  126     | constants
  127     | function_call
  128     | LPA expression RPA
  129     | LCU expression RCU

  130 lhs: VARIABLE
  131    | lhs LSQ expression RSQ

  132 function_call: VARIABLE LPA arguments RPA

  133 arguments: argument_list
  134          | %empty

  135 argument_list: expression
  136              | argument_list COM expression

  137 expression_statement: expression SCOLON

  138 constants: ICONST
  139          | CCONST
  140          | FCONST
  141          | multisconsts

  142 multisconsts: SCONST
  143             | SCONST multisconsts

  144 binary_operator: ADD
  145                | SUB
  146                | MUL
  147                | DIV
  148                | MOD
  149                | BAND
  150                | BOR
  151                | XOR
  152                | TWAY
  153                | ARROW
  154                | DOT
  155                | COM

  156 relational_operator: EEQ
  157                    | LEQ
  158                    | LESS
  159                    | GRTR
  160                    | GEQ
  161                    | NEQ

  162 logical_operator: AND
  163                 | OR

  164 unary_operator: NEG
  165               | NOT


Terminals, with rules where they appear

$end (0) 0
error (256)
VARIABLE (258) 17 41 54 55 130 132
BREAK (259) 99
CASE (260) 97
CHAR (261) 15
COL (262) 97 100
COM (263) 31 35 48 136 155
CONTINUE (264) 98
DEFAULT (265) 100
DO (266) 106
DOUBLE (267) 21
ELSE (268) 92
ERR (269)
EXTERN (270) 20
FLOAT (271) 14
FOR (272) 104 105
IF (273) 91 92
INT (274) 13
LONG (275) 18
RETURN (276) 95 96
SHORT (277) 19
SIZEOF (278) 123 124
STRUCT (279) 17 54 55
SWITCH (280) 94
VOID (281) 16
WHILE (282) 93 106
LSQ (283) 40 52 53 131
RSQ (284) 40 52 53 131
LPA (285) 44 45 91 92 93 94 104 105 106 113 123 124 128 132
RPA (286) 44 45 91 92 93 94 104 105 106 113 123 124 128 132
LCU (287) 54 55 60 61 129
RCU (288) 54 55 60 61 129
DOT (289) 154
ARROW (290) 153
PINC (291) 119 121
PDEC (292) 120 122
BAND (293) 118 149
MUL (294) 26 27 43 117 146
ADD (295) 115 144
SUB (296) 114 145
NEG (297) 164
NOT (298) 165
DIV (299) 147
MOD (300) 148
LESS (301) 158
GRTR (302) 159
LEQ (303) 157
GEQ (304) 160
EEQ (305) 156
EQ (306) 37 101 107
NEQ (307) 161
XOR (308) 151
OR (309) 163
BOR (310) 150
AND (311) 162
TWAY (312) 152
SCONST (313) 142 143
SCOLON (314) 29 33 45 54 76 90 95 96 98 99 101 104 105 106 137
FCONST (315) 140
ICONST (316) 138
CCONST (317) 139
DUMMY (318)


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
program (65)
    on left: 1, on right: 0
declaration_list (66)
    on left: 2 4, on right: 1 4
@1 (67)
    on left: 3, on right: 4
declaration (68)
    on left: 5 6 7 8, on right: 2 4
var_declaration (69)
    on left: 9, on right: 5 56 105
svar_declaration (70)
    on left: 10, on right: 11 12
svar_declaration_list (71)
    on left: 11 12, on right: 12 54 55
basic_type (72)
    on left: 13 14 15 16 17 18 19 20 21, on right: 22 23
type (73)
    on left: 22 23, on right: 9 10 23 24 25 44 45 50 51
pointer_type (74)
    on left: 24 25, on right: 49 113 124
stars (75)
    on left: 26 27, on right: 25 27
var_list (76)
    on left: 29 31, on right: 9 31 55
$@2 (77)
    on left: 28, on right: 29
$@3 (78)
    on left: 30, on right: 31
svar_list (79)
    on left: 33 35, on right: 10 35
$@4 (80)
    on left: 32, on right: 33
$@5 (81)
    on left: 34, on right: 35
var_dec (82)
    on left: 36 37, on right: 29 31
svar_dec (83)
    on left: 38, on right: 33 35
var_dec_lhs (84)
    on left: 39 40, on right: 36 37 38
var_id (85)
    on left: 41 43, on right: 39 40 43 44 45 50 51
$@6 (86)
    on left: 42, on right: 43
fun_declaration (87)
    on left: 44, on right: 6
fun_prototype (88)
    on left: 45, on right: 7
proto_param_list (89)
    on left: 46 47 48, on right: 44 45 48
proto_params (90)
    on left: 49 50 51, on right: 47 48
nd_bracket (91)
    on left: 52 53, on right: 51 53
struct_definition (92)
    on left: 54 55, on right: 8 57
decl_statement (93)
    on left: 56 57, on right: 63
statement_list (94)
    on left: 58 59, on right: 59 61 97 100
compound_statement (95)
    on left: 60 61, on right: 44 62 77
statement (96)
    on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76, on right:
    58 59
lstatement (97)
    on left: 77 78 79 80 81 82 83 84 85 86 87 88 89 90, on right: 91
    92 93 94 104 105 106
if_statement (98)
    on left: 91 92, on right: 64 78
while_statement (99)
    on left: 93, on right: 65 79
switch_statement (100)
    on left: 94, on right: 66 80
return_statement (101)
    on left: 95 96, on right: 67 81
case_statement (102)
    on left: 97, on right: 69 83
continue_statement (103)
    on left: 98, on right: 72 86
break_statement (104)
    on left: 99, on right: 68 82
default_statement (105)
    on left: 100, on right: 73 87
assign_statement (106)
    on left: 101, on right: 70 84
exp_wrap (107)
    on left: 102 103, on right: 104 105
for_statement (108)
    on left: 104 105, on right: 71 85
do_statement (109)
    on left: 106, on right: 74 88
expression (110)
    on left: 107 108 109 110 111 112, on right: 37 40 91 92 93 94 96
    97 101 103 106 107 108 109 110 128 129 131 135 136 137
cast_expression (111)
    on left: 113, on right: 111
term (112)
    on left: 114 115 116 117 118 119 120 121 122 123 124 125 126 127
    128 129, on right: 101 107 111 112 114 115 116 117 118 119 120
    121 122 123
lhs (113)
    on left: 130 131, on right: 125 131
function_call (114)
    on left: 132, on right: 127
arguments (115)
    on left: 133 134, on right: 132
argument_list (116)
    on left: 135 136, on right: 133 136
expression_statement (117)
    on left: 137, on right: 75 89
constants (118)
    on left: 138 139 140 141, on right: 126
multisconsts (119)
    on left: 142 143, on right: 141 143
binary_operator (120)
    on left: 144 145 146 147 148 149 150 151 152 153 154 155, on right:
    108
relational_operator (121)
    on left: 156 157 158 159 160 161, on right: 109
logical_operator (122)
    on left: 162 163, on right: 110
unary_operator (123)
    on left: 164 165, on right: 116


State 0

    0 $accept: . program $end

    CHAR    shift, and go to state 1
    DOUBLE  shift, and go to state 2
    EXTERN  shift, and go to state 3
    FLOAT   shift, and go to state 4
    INT     shift, and go to state 5
    LONG    shift, and go to state 6
    SHORT   shift, and go to state 7
    STRUCT  shift, and go to state 8
    VOID    shift, and go to state 9

    program            go to state 10
    declaration_list   go to state 11
    declaration        go to state 12
    var_declaration    go to state 13
    basic_type         go to state 14
    type               go to state 15
    fun_declaration    go to state 16
    fun_prototype      go to state 17
    struct_definition  go to state 18


State 1

   15 basic_type: CHAR .

    $default  reduce using rule 15 (basic_type)


State 2

   21 basic_type: DOUBLE .

    $default  reduce using rule 21 (basic_type)


State 3

   20 basic_type: EXTERN .

    $default  reduce using rule 20 (basic_type)


State 4

   14 basic_type: FLOAT .

    $default  reduce using rule 14 (basic_type)


State 5

   13 basic_type: INT .

    $default  reduce using rule 13 (basic_type)


State 6

   18 basic_type: LONG .

    $default  reduce using rule 18 (basic_type)


State 7

   19 basic_type: SHORT .

    $default  reduce using rule 19 (basic_type)


State 8

   17 basic_type: STRUCT . VARIABLE
   54 struct_definition: STRUCT . VARIABLE LCU svar_declaration_list RCU SCOLON
   55                  | STRUCT . VARIABLE LCU svar_declaration_list RCU var_list

    VARIABLE  shift, and go to state 19


State 9

   16 basic_type: VOID .

    $default  reduce using rule 16 (basic_type)


State 10

    0 $accept: program . $end

    $end  shift, and go to state 20


State 11

    1 program: declaration_list .

    $default  reduce using rule 1 (program)


State 12

    2 declaration_list: declaration .
    4                 | declaration . @1 declaration_list

    $end      reduce using rule 2 (declaration_list)
    $default  reduce using rule 3 (@1)

    @1  go to state 21


State 13

    5 declaration: var_declaration .

    $default  reduce using rule 5 (declaration)


State 14

   22 type: basic_type .

    $default  reduce using rule 22 (type)


State 15

    9 var_declaration: type . var_list
   23 type: type . basic_type
   44 fun_declaration: type . var_id LPA proto_param_list RPA compound_statement
   45 fun_prototype: type . var_id LPA proto_param_list RPA SCOLON

    VARIABLE  shift, and go to state 22
    CHAR      shift, and go to state 1
    DOUBLE    shift, and go to state 2
    EXTERN    shift, and go to state 3
    FLOAT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SHORT     shift, and go to state 7
    STRUCT    shift, and go to state 23
    VOID      shift, and go to state 9
    MUL       shift, and go to state 24

    basic_type   go to state 25
    var_list     go to state 26
    var_dec      go to state 27
    var_dec_lhs  go to state 28
    var_id       go to state 29


State 16

    6 declaration: fun_declaration .

    $default  reduce using rule 6 (declaration)


State 17

    7 declaration: fun_prototype .

    $default  reduce using rule 7 (declaration)


State 18

    8 declaration: struct_definition .

    $default  reduce using rule 8 (declaration)


State 19

   17 basic_type: STRUCT VARIABLE .
   54 struct_definition: STRUCT VARIABLE . LCU svar_declaration_list RCU SCOLON
   55                  | STRUCT VARIABLE . LCU svar_declaration_list RCU var_list

    LCU  shift, and go to state 30

    $default  reduce using rule 17 (basic_type)


State 20

    0 $accept: program $end .

    $default  accept


State 21

    4 declaration_list: declaration @1 . declaration_list

    CHAR    shift, and go to state 1
    DOUBLE  shift, and go to state 2
    EXTERN  shift, and go to state 3
    FLOAT   shift, and go to state 4
    INT     shift, and go to state 5
    LONG    shift, and go to state 6
    SHORT   shift, and go to state 7
    STRUCT  shift, and go to state 8
    VOID    shift, and go to state 9

    declaration_list   go to state 31
    declaration        go to state 12
    var_declaration    go to state 13
    basic_type         go to state 14
    type               go to state 15
    fun_declaration    go to state 16
    fun_prototype      go to state 17
    struct_definition  go to state 18


State 22

   41 var_id: VARIABLE .

    $default  reduce using rule 41 (var_id)


State 23

   17 basic_type: STRUCT . VARIABLE

    VARIABLE  shift, and go to state 32


State 24

   43 var_id: MUL . $@6 var_id

    $default  reduce using rule 42 ($@6)

    $@6  go to state 33


State 25

   23 type: type basic_type .

    $default  reduce using rule 23 (type)


State 26

    9 var_declaration: type var_list .

    $default  reduce using rule 9 (var_declaration)


State 27

   29 var_list: var_dec . $@2 SCOLON
   31         | var_dec . $@3 COM var_list

    COM       reduce using rule 30 ($@3)
    $default  reduce using rule 28 ($@2)

    $@2  go to state 34
    $@3  go to state 35


State 28

   36 var_dec: var_dec_lhs .
   37        | var_dec_lhs . EQ expression

    EQ  shift, and go to state 36

    $default  reduce using rule 36 (var_dec)


State 29

   39 var_dec_lhs: var_id .
   40            | var_id . LSQ expression RSQ
   44 fun_declaration: type var_id . LPA proto_param_list RPA compound_statement
   45 fun_prototype: type var_id . LPA proto_param_list RPA SCOLON

    LSQ  shift, and go to state 37
    LPA  shift, and go to state 38

    $default  reduce using rule 39 (var_dec_lhs)


State 30

   54 struct_definition: STRUCT VARIABLE LCU . svar_declaration_list RCU SCOLON
   55                  | STRUCT VARIABLE LCU . svar_declaration_list RCU var_list

    CHAR    shift, and go to state 1
    DOUBLE  shift, and go to state 2
    EXTERN  shift, and go to state 3
    FLOAT   shift, and go to state 4
    INT     shift, and go to state 5
    LONG    shift, and go to state 6
    SHORT   shift, and go to state 7
    STRUCT  shift, and go to state 23
    VOID    shift, and go to state 9

    svar_declaration       go to state 39
    svar_declaration_list  go to state 40
    basic_type             go to state 14
    type                   go to state 41


State 31

    4 declaration_list: declaration @1 declaration_list .

    $default  reduce using rule 4 (declaration_list)


State 32

   17 basic_type: STRUCT VARIABLE .

    $default  reduce using rule 17 (basic_type)


State 33

   43 var_id: MUL $@6 . var_id

    VARIABLE  shift, and go to state 22
    MUL       shift, and go to state 24

    var_id  go to state 42


State 34

   29 var_list: var_dec $@2 . SCOLON

    SCOLON  shift, and go to state 43


State 35

   31 var_list: var_dec $@3 . COM var_list

    COM  shift, and go to state 44


State 36

   37 var_dec: var_dec_lhs EQ . expression

    VARIABLE  shift, and go to state 45
    SIZEOF    shift, and go to state 46
    LPA       shift, and go to state 47
    LCU       shift, and go to state 48
    PINC      shift, and go to state 49
    PDEC      shift, and go to state 50
    BAND      shift, and go to state 51
    MUL       shift, and go to state 52
    ADD       shift, and go to state 53
    SUB       shift, and go to state 54
    NEG       shift, and go to state 55
    NOT       shift, and go to state 56
    SCONST    shift, and go to state 57
    FCONST    shift, and go to state 58
    ICONST    shift, and go to state 59
    CCONST    shift, and go to state 60

    expression       go to state 61
    cast_expression  go to state 62
    term             go to state 63
    lhs              go to state 64
    function_call    go to state 65
    constants        go to state 66
    multisconsts     go to state 67
    unary_operator   go to state 68


State 37

   40 var_dec_lhs: var_id LSQ . expression RSQ

    VARIABLE  shift, and go to state 45
    SIZEOF    shift, and go to state 46
    LPA       shift, and go to state 47
    LCU       shift, and go to state 48
    PINC      shift, and go to state 49
    PDEC      shift, and go to state 50
    BAND      shift, and go to state 51
    MUL       shift, and go to state 52
    ADD       shift, and go to state 53
    SUB       shift, and go to state 54
    NEG       shift, and go to state 55
    NOT       shift, and go to state 56
    SCONST    shift, and go to state 57
    FCONST    shift, and go to state 58
    ICONST    shift, and go to state 59
    CCONST    shift, and go to state 60

    expression       go to state 69
    cast_expression  go to state 62
    term             go to state 63
    lhs              go to state 64
    function_call    go to state 65
    constants        go to state 66
    multisconsts     go to state 67
    unary_operator   go to state 68


State 38

   44 fun_declaration: type var_id LPA . proto_param_list RPA compound_statement
   45 fun_prototype: type var_id LPA . proto_param_list RPA SCOLON

    CHAR    shift, and go to state 1
    DOUBLE  shift, and go to state 2
    EXTERN  shift, and go to state 3
    FLOAT   shift, and go to state 4
    INT     shift, and go to state 5
    LONG    shift, and go to state 6
    SHORT   shift, and go to state 7
    STRUCT  shift, and go to state 23
    VOID    shift, and go to state 9

    $default  reduce using rule 46 (proto_param_list)

    basic_type        go to state 14
    type              go to state 70
    pointer_type      go to state 71
    proto_param_list  go to state 72
    proto_params      go to state 73


State 39

   11 svar_declaration_list: svar_declaration .
   12                      | svar_declaration . svar_declaration_list

    CHAR    shift, and go to state 1
    DOUBLE  shift, and go to state 2
    EXTERN  shift, and go to state 3
    FLOAT   shift, and go to state 4
    INT     shift, and go to state 5
    LONG    shift, and go to state 6
    SHORT   shift, and go to state 7
    STRUCT  shift, and go to state 23
    VOID    shift, and go to state 9

    $default  reduce using rule 11 (svar_declaration_list)

    svar_declaration       go to state 39
    svar_declaration_list  go to state 74
    basic_type             go to state 14
    type                   go to state 41


State 40

   54 struct_definition: STRUCT VARIABLE LCU svar_declaration_list . RCU SCOLON
   55                  | STRUCT VARIABLE LCU svar_declaration_list . RCU var_list

    RCU  shift, and go to state 75


State 41

   10 svar_declaration: type . svar_list
   23 type: type . basic_type

    VARIABLE  shift, and go to state 22
    CHAR      shift, and go to state 1
    DOUBLE    shift, and go to state 2
    EXTERN    shift, and go to state 3
    FLOAT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SHORT     shift, and go to state 7
    STRUCT    shift, and go to state 23
    VOID      shift, and go to state 9
    MUL       shift, and go to state 24
